@@ -38,11 +38,12 @@ namespace VDS.RDF.Parsing
     /// <remarks>
     /// </remarks>
     /// <threadsafety instance="true">Designed to be Thread Safe - should be able to call Load from multiple threads on different Graphs without issue</threadsafety>
-    public class Notation3Parser : IRdfReader, ITraceableParser, ITraceableTokeniser
+    public class Notation3Parser 
+        : IRdfReader, ITraceableParser, ITraceableTokeniser, ITokenisingParser
     {
         private bool _traceParsing = false;
         private bool _traceTokeniser = false;
-        private TokenQueueMode _queueMode = TokenQueueMode.SynchronousBufferDuringParsing;
+        private TokenQueueMode _queueMode = Options.DefaultTokenQueueMode;
 
         /// <summary>
         /// The Uri for log:implies
@@ -95,6 +96,21 @@ namespace VDS.RDF.Parsing
             set
             {
                 this._traceTokeniser = value;
+            }
+        }
+
+        /// <summary>
+        /// Gets/Sets the token queue mode used
+        /// </summary>
+        public TokenQueueMode TokenQueueMode
+        {
+            get
+            {
+                return this._queueMode;
+            }
+            set
+            {
+                this._queueMode = value;
             }
         }
 
