@@ -8,6 +8,7 @@ Changed
 - Bug Fixes
  - Fix for one form of AllegroGraphConnector constructor confusing Store and Catalog IDs
  - StoreHandler did not propogate namespaces to all graphs (CORE-334)
+ - SPARQL expression parsing could occassionally reject some numeric literals incorrectly (CORE-332)
 - Dependencies
  - Upgrade VDS.Common to 1.2.0 which resolves an issue that users may encounter under the VS debugger (CORE-317, CORE-292)
 - Documentation
